--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-deep-linking": "2.1.0",
-    "react-native-dotenv": "0.0.4",
     "react-native-hr": "^1.1.3",
     "react-native-mqtt": "github:rusfearuth/react-native-mqtt",
     "react-native-paho-mqtt": "0.0.8",
@@ -20,8 +19,9 @@
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
-    "babel-preset-react-native": "1.9.2",
-    "jest": "20.0.3"
+    "babel-preset-react-native": "^1.9.2",
+    "jest": "20.0.3",
+    "react-native-dotenv": "0.0.4"
   },
   "jest": {
     "preset": "react-native"
