.env for demo dev env

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,15 @@
 APP_KEY=
 APP_SECRET=
 
-# Authentication Host
-AUTH_HOST=https://auth.mydevices.com/
-API_HOST=https://platform.mydevices.com/v1.1/
 
-# Application redirect URI (Sample app uses this as its deep linking URL)
-IMPLICIT_REDIRECT_URI=sample://implicit
-EXPLICIT_REDIRECT_URI=sample://explicit
+# Authentication Host
+AUTH_HOST=http://dev-api.mydevices.com:3008/
+
+# Main platform host
+API_HOST=http://dev-kong-elb.mydevices.com/v1.1/
+
+# Streaming Host
+STREAMING_HOST=https://dev-api.mydevices.com:8000/stream/
+
+# History Hosy
+HISTORY_HOST=https://dev-api.mydevices.com:8023/devices/
