--- a/ios/CayenneSampleApp/Info.plist
+++ b/ios/CayenneSampleApp/Info.plist
@@ -56,14 +56,8 @@
 	<string></string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>localhost</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-			</dict>
-		</dict>
-	</dict>
+       <key>NSAllowsArbitraryLoads</key>
+       <true/>
+    </dict>
 </dict>
 </plist>
