--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,16 @@ APP_SECRET=
 
 
 # Authentication Host
-AUTH_HOST=http://dev-api.mydevices.com:3008/
+AUTH_HOST=https://va-prod-auth/
 
 # Main platform host
-API_HOST=http://dev-kong-elb.mydevices.com/v1.1/
+API_HOST=https://platform.mydevices.com/v1.1/
 
 # Streaming Host
-STREAMING_HOST=https://dev-api.mydevices.com:8000/stream/
+STREAMING_HOST=https://va-prod-stream/stream/
 
-# History Hosy
-HISTORY_HOST=https://dev-api.mydevices.com:8023/devices/
+# History Host
+HISTORY_HOST=https://va-prod-delorean/devices/
+
+# Rules Service Host
+RULES_HOST=https://va-prod-executor/
