--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-native-paho-mqtt": "0.0.8",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^4.2.0",
-    "react-navigation": "^1.0.0-beta.9"
+    "react-navigation": "^1.5.12"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
